; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_socket.c_mac_socket_check_setsockopt.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_socket.c_mac_socket_check_setsockopt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.sockopt = type { i32 }

@socket_check_setsockopt = common dso_local global i32 0, align 4
@mac_socket_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_socket_check_setsockopt(i32 %0, %struct.socket* %1, %struct.sockopt* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.socket*, align 8
  %6 = alloca %struct.sockopt*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.socket* %1, %struct.socket** %5, align 8
  store %struct.sockopt* %2, %struct.sockopt** %6, align 8
  %8 = load i32, i32* @socket_check_setsockopt, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.socket*, %struct.socket** %5, align 8
  %11 = ptrtoint %struct.socket* %10 to i32
  %12 = load %struct.socket*, %struct.socket** %5, align 8
  %13 = getelementptr inbounds %struct.socket, %struct.socket* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.sockopt*, %struct.sockopt** %6, align 8
  %16 = call i32 @MAC_CHECK(i32 %8, i32 %9, i32 %11, i32 %14, %struct.sockopt* %15)
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @MAC_CHECK(i32, i32, i32, i32, %struct.sockopt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
